# skill-system

./: .gitignore  CHANGELOG.md  FIELD_FEEDBACK.md  LOCAL_PLUGIN_MARKETPLACE.md  README.ko.md  README.md  TERMS.md
.agents/plugins/: marketplace.json
.claude/: .generated  CLAUDE.md  context-routing.md
.claude/docs/: agent_output_validation.md  (+12 more)
.codex/: AGENTS.md  context-routing.md  hooks.json  research-routing.md
integrations/kanboard-plan-sync/: README.md  pyproject.toml
integrations/kanboard-plan-sync/docs/: kanboard-localhost-setup.md
integrations/kanboard-plan-sync/examples/: mcp.claude.json  mcp.codex.toml
integrations/kanboard-plan-sync/scripts/: live_smoke.py
integrations/kanboard-plan-sync/src/kanboard_plan_sync/: __init__.py  __main__.py  bootstrap.py  config.py  diff.py  kanboard_client.py  manifest.py  models.py  parser.py  projection.py  pull.py  registry.py  rollout.py  runtime.py  snapshot.py  state.py  status.py  sync.py  token_guard.py  validation.py  workspace.py
integrations/kanboard-plan-sync/src/kanboard_plan_sync_mcp/: __init__.py  __main__.py  server.py  tools.py
integrations/kanboard-plan-sync/tests/: _fakes.py  test_bootstrap.py  test_config_state.py  test_diff.py  test_kanboard_client.py  test_live_integration.py  test_manifest.py  test_mapping.py  test_mcp_tools.py  test_parser.py  test_projection.py  test_pull.py  test_registry.py  test_rollout.py  test_snapshot.py  test_state_hardening.py  test_status.py  test_sync.py  test_token_guard.py
source/: README.md  mirror-meta.json  runtime-inventory.yaml  runtime-payload-policy.md
(+793 files in other folders)
