[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kanboard-plan-sync"
version = "0.1.0"
description = "Markdown-primary plan sync core and plan-centric MCP facade for a local Kanboard projection."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=7.0"]

[project.scripts]
kanboard-plan-sync = "kanboard_plan_sync.__main__:main"
kanboard-plan-sync-mcp = "kanboard_plan_sync_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
